--- a/sred/scientific-research-experimental-development-tax-incentive-program/how-submit.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/how-submit.html
@@ -256,16 +256,16 @@
 		 <p>To learn more about filing due dates and SR&ED reporting deadlines, review the <a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/filing-requirements-policy.html#toc5">Section 5, Filing Requirements Policy</a>.</p>	 
 
 		 <h2 id="h4">How to submit your claim</h2>
-<p>Submit your SR&amp;ED claim with your original income tax return for the year or with an amended return. Depending of the type of claimant you are, you may either submit your claim <strong>online or by mail</strong>.</p>
+<p>Submit your SR&amp;ED claim with your original income tax return for the year or with an amended return. Depending of the type of claimant you are, you may either submit your claim online or by mail.</p>
 <!--OR treatment--> 
 		 
 <div class="cnjnctn-type-or cnjnctn-xs mrgn-bttm-lg">
 <div class="cnjnctn-col">
-<h4 class="mrgn-tp-sm text-muted">Online<span class="wb-inv">: Option 1 of X</span></h4>
+<h4 class="mrgn-tp-sm text-muted">Submit online<span class="wb-inv">: Option 1 of X</span></h4>
 <p>If you use software to do your income taxes, submit your claim electronically. Use the same method you use for your taxes.</p>
 </div>
 <div class="cnjnctn-col">
-<h4 class="mrgn-tp-sm text-muted">By mail<span class="wb-inv">: Option 2 of X</span></h4>
+<h4 class="mrgn-tp-sm text-muted">Submit by mail<span class="wb-inv">: Option 2 of X</span></h4>
 <p>Individuals, trusts, and partnerships who file a paper income tax return may send their claim by mail to the Tax Services Office where they send their income tax.</p>
 </div></div>
 	      
