--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -1128,6 +1128,19 @@
 </li>
 
 <li class="code-num">
+<details>  <summary>Code 200 – Provincial/Territorial COVID-19 financial assistance payments </summary> 
+<p id="cd200">Report amounts that were paid as financial assistance by a provincial or territorial government to support individuals affected by COVID-19 and that are taxable under subparagraphs 56(1)(r)(i) or (iv), or clause 56(1)(r)(iv.1)(E) of the Income Tax Act, minus any amounts repaid within the same tax year using code 200.</p>
+
+</details> 
+</li>
+<li class="code-num">
+<details>  <summary>Code 201 – Repayment of COVID-19 financial assistance </summary> 
+   <p id="cd201">Report the amount of federal, provincial or territorial COVID-19 financial assistance payments that were repaid in the year in respect of an overpayment of federal, provincial or territorial COVID-19 financial assistance payments received in a prior year using code 201. </p>
+<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/payments-cra/individual-payments/repay-covid-benefits.html">Repay COVID-19 benefits</a></p> 
+ </details> 
+</li>
+
+<li class="code-num">
  <details > <summary>Code 205 – One-time payment for older seniors </summary> 
  <p id="cd205">Report the one-time supplementary OAS payment made to older seniors made in 2021 or 2022 using code 205.</p>
 <p><strong>Do not</strong> report this payment using the T4A(OAS) slip.</p> 
