--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -1129,7 +1129,8 @@
 
 <li class="code-num">
 <details>  <summary>Code 200 – Provincial/Territorial COVID-19 financial assistance payments </summary> 
-<p id="cd200">Report amounts that were paid as financial assistance by a provincial or territorial government to support individuals affected by COVID-19 and that are taxable under subparagraphs 56(1)(r)(i) or (iv), or clause 56(1)(r)(iv.1)(E) of the Income Tax Act, minus any amounts repaid within the same tax year using code 200.</p>
+<p id="cd200">Report amounts that were paid as financial assistance by a provincial or territorial government to support individuals affected by COVID-19 and that are taxable under subparagraphs 56(1)(r)(i) or (iv), or clause 56(1)(r)(iv.1)(E) of the Income Tax Act, minus any amounts repaid within the <strong>same tax year</strong> using code 200. </p>
+
 
 </details> 
 </li>
