--- a/payroll/calculate/payment/first-nations-pop.html
+++ b/payroll/calculate/payment/first-nations-pop.html
@@ -87,11 +87,15 @@
  <h1 property="name" id="wb-cont" class="gc-thickline">Indian Act exemption for employment income guidelines</h1>
 
 <div id="ajax-fntermall">
-<div id="ajax-fnterm">
-<p><span class="fa fa-balance-scale fa-lg text-muted"></span> The term First Nations on this page refers <strong>only</strong> to an individual who is registered or entitled to be registered under the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-5/">Indian Act</a>. </p>
+<div id="ajax-fnterm">  
+<div class="well brdr-rds-0"> <span class="fa-stack text-muted fa-lg  mrgn-lft-sm pull-right"><i class="far fa-circle fa-stack-2x"></i><i class="fas fa-balance-scale-right fa-stack-1x"></i></span>
+    <h3 class="h4 mrgn-tp-0">Term "Indian"</h3>
+    <p>The term First Nations on this page refers <strong>only</strong> to an individual who is registered or entitled to be registered under the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-5/">Indian Act</a>. </p>
+  </div>
  </div>
 <p>Many Indigenous people in Canada prefer not to describe themselves as Indians and view this term as rooted in colonialism and racism. Under the Indian Act, the precise legal meaning of the term "Indian" refers to First Nations persons who are entitled to registration. </p>
  </div>
+
 
  <h3>On this page</h3>
 <ul>
