--- a/sred/scientific-research-experimental-development-tax-incentive-program/how-submit.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/how-submit.html
@@ -256,7 +256,7 @@
 		 <p>To learn more about filing due dates and SR&ED reporting deadlines, review the <a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/filing-requirements-policy.html#toc5">Section 5, Filing Requirements Policy</a>.</p>	 
 
 		 <h2 id="h4">How to submit your claim</h2>
-<p>Depending of the type of claimant you are, you may either submit your claim online or by mail. Submit your SR&amp;ED claim with your original income tax return for the year or with an amended return. </p>
+<p>Depending of the type of claimant you are, you may either submit your claim <strong>online or by mail(/strong>. Submit your SR&amp;ED claim with your original income tax return for the year or with an amended return. </p>
 <!--OR treatment--> 
 		 
 <div class="cnjnctn-type-or cnjnctn-xs mrgn-bttm-lg">
