--- a/sred/scientific-research-experimental-development-tax-incentive-program/grouping.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/grouping.html
@@ -170,16 +170,17 @@
 <div class="col-md-7">
 <p class="mrgn-tp-md"><strong>Scenario 1: All activities in your business project are eligible </strong></p>
 <p>All work in a given business project is eligible and can form one SR&amp;ED project.</p>
+	<p>For example, if your business project contains 4 activities, these activities can be grouped to form one SR&amp;ED project.</p>
 </div>
 <div class="col-md-5">    
 <img src="project1.png" class="img-responsive mrgn-tp-md mrgn-bttm-md" alt="Diagram of scenario 1.">  
 </div>   
 <div class="clearfix"></div>    
-<details>
+<!--<details>
 <summary>Review text description of scenario 1</summary>
 <p><strong>Scenario 1</strong></p>
 <p>The diagram shows that Business project 1 contains four activities. These four activities are  grouped together to  form one SR&ED project.</p>
-</details>     
+</details>-->     
 </div>    
 <div class="clearfix"></div>         
              
