hid scenario 3 & 4 ex-hides

--- a/sred/scientific-research-experimental-development-tax-incentive-program/grouping.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/grouping.html
@@ -193,11 +193,11 @@
 <img src="project2.png" class="img-responsive mrgn-tp-md mrgn-bttm-md" alt="Diagram of scenario 2.">  
 </div>   
 <div class="clearfix"></div>       
-<details>
+<!--<details>
 <summary>Review text description of scenario 2</summary>
 <p><strong>Scenario 2</strong></p>
 <p>The diagram shows that Business project 2 contains four activities. Two of the four activities are grouped together to  form one SR&ED project.</p>
-</details>     
+</details>-->     
 </div>  
 <div class="clearfix"></div>         
              
@@ -210,11 +210,11 @@
 <img src="project3.png" class="img-responsive mrgn-tp-md mrgn-bttm-md" alt="Diagram of scenario 3.">  
 </div>   
 <div class="clearfix"></div>    
-<details>
+<!--<details>
 <summary>Review text description of scenario 3</summary>
 <p><strong>Scenario 3</strong></p>
 <p>The diagram shows two business projects, Business project 3 and Business project 4. Both projects contain four activities each. Two activities from ‘Business project 3’ and two activities from ‘Business project 4’ are grouped together to form one SR&ED project.</p>
-</details>     
+</details>-->     
 </div>    
 <div class="clearfix"></div>                  
       
