--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -106,11 +106,12 @@
 <div class="alert alert-info">
 <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
 </div>
-
+<div id="ajax-info1">
 <p>Depending if the worker is an <strong>employee</strong>, <strong>self-employed</strong> or an <strong>incorporated employee</strong> the tax obligations may be different.</p>
-
+</div>
+<div id="ajax-info2">
 <p>The incorporated employee and the payer have different tax obligations because the incorporated employee <strong>performs the services on behalf of their own corporation</strong>. An incorporated employee in this situation is considered a personal services business (PSB).</p>
-
+</div>
 <p>To understand the tax obligations, continue to one of the following depending on the type of relationship:</p>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
