--- a/payroll/guidance/tax-obligations-employee.html
+++ b/payroll/guidance/tax-obligations-employee.html
@@ -108,6 +108,8 @@
 <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
 </div>
 
+<div data-ajax-replace="/cra-arc/payroll/guidance/after.html#ajax-info1"></div>
+
 <p>Depending if the worker is an <strong>employee</strong>, <strong>self-employed</strong> or an <strong>incorporated employee</strong> the tax obligations may be different.</p>
 
 <p><i class="fas fa-user-tag fa-2xl text-primary"></i> If you are not sure if the worker is an employee, continue to: <a href="factors.html">Determine if the worker is an employee or self-employed</a></p>
