--- a/payroll/calculate/payment/truck-drivers.html
+++ b/payroll/calculate/payment/truck-drivers.html
@@ -266,8 +266,9 @@
 
 </div>
 
-<p>Add intro here.</p>
 
+<div data-ajax-replace="/cra-arc/payroll/guidance/after.html#ajax-info1"></div>
+<div data-ajax-replace="/cra-arc/payroll/guidance/after.html#ajax-info2"></div>
 
 <p>Determine your withholding and reporting obligations based on the type of income you paid to the worker:</p>
 <ul>
