Line edits scenarios 2 & 3

--- a/sred/scientific-research-experimental-development-tax-incentive-program/grouping.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/grouping.html
@@ -188,6 +188,7 @@
 <div class="col-md-7">
 <p class="mrgn-tp-md"><strong>Scenario 2: Some activities within a business project are eligible</strong></p>
 <p>Your business project may have a mix of eligible and ineligible work. Only the  eligible work can be part of your SR&amp;ED project.</p>
+<p>For example, your business project contains 4 activities and only 2 are eligible. You can group the 2 eligible activities to form one SR&amp;ED project.</p>
 </div>
 <div class="col-md-5">    
 <img src="project2.png" class="img-responsive mrgn-tp-md mrgn-bttm-md" alt="Diagram of scenario 2.">  
@@ -205,6 +206,7 @@
 <div class="col-md-7">
 <p class="mrgn-tp-md"><strong>Scenario 3: Some activities over several business projects are eligible</strong></p>
 <p>You may have several business projects where eligible work is happening. You can group eligible work across your  business projects into one SR&amp;ED project as long as they relate to the same advancement.</p>
+	<p>For example, you have 2 business projects that contain 4 activities each. But only 2 activities in each project are eligible. Since the eligible activities relate to the same advancement, you can group them to form one SR&amp;ED project.</p>
 </div>
 <div class="col-md-5">    
 <img src="project3.png" class="img-responsive mrgn-tp-md mrgn-bttm-md" alt="Diagram of scenario 3.">  
