--- a/sred/scientific-research-experimental-development-tax-incentive-program/grouping.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/grouping.html
@@ -188,7 +188,7 @@
 <div class="col-md-7">
 <p class="mrgn-tp-md"><strong>Scenario 2: Some activities within a business project are eligible</strong></p>
 <p>Your business project may have a mix of eligible and ineligible work. Only the  eligible work can be part of your SR&amp;ED project.</p>
-<p>For example, your business project contains 4 activities and only 2 are eligible. You can group the 2 eligible activities to form one SR&amp;ED project.</p>
+<p>For example, your business project contains 4 activities but only 2 are eligible. You can group the 2 eligible activities to form one SR&amp;ED project.</p>
 </div>
 <div class="col-md-5">    
 <img src="project2.png" class="img-responsive mrgn-tp-md mrgn-bttm-md" alt="Diagram of scenario 2.">  
