--- a/subway/fire/1.html
+++ b/subway/fire/1.html
@@ -60,24 +60,59 @@
             <nav class="gc-subway provisional">
                <h1>File electronically: Information returns (tax slips and tax summaries)</h1>
                <ul>
-	<p>When and how to file, distribute and amend information slips electronically (for example, T4, T4A, T5, and other type of returns), including how to use Web Forms.</p>
-                 <h2>Sections</h2>
-		       <li><a href="1.html" class="active">What to fill out</a></li>
+                  <li><a href="1.html" class="active">What to fill out</a></li>
                   <li><a href="2.html">When to file</a></li>
                   <li><a href="3.html">Get ready to file</a></li>
                   <li><a href="4.html">How to file</a></li>
                   <li><a href="5.html">Make corrections after filing</a></li>
 				  <li><a href="6.html">Contact us</a></li>
                </ul>
+            </nav>
+            <h1 property="name" id="wb-cont" class="gc-thickline">What to fill out</h1>
            
-	     <h3>Related services and information</h3>
-	    <ul>
-<li><a href="link">Web access code</a></li>
-<li><a href="link">Internet file transfer</a></li>
-<li><a href="link">Web forms</a></li>
-<li><a href="link">My Business Account</a></li>
-<li><a href="link">represent a client</a></li>
+		    <p>Select the type of information return to find out who must fill out, what to report and when to issue slips.</p>
+		    <ul>
+<li><a href="#">AGR-1, Statement of Farm-Support Payments</a></li>
+<li><a href="#">NR4, Statement of Amounts Paid or Credited to Non-Residents of Canada</a></li>
+<li><a href="#">T3, Statement of Trusts Income Allocations and Designations</a></li>
+<li><a href="#">T3GR, Group Income Tax and Information Return for RRSP, RRIF, RESP, or RDSP Trusts</a></li>
+<li><a href="#">T3P, Employees’ Pension Plan Income Tax Return</a></li>
+<li><a href="#">T3PRP, T3 Pooled Registered Pension Pan Tax Return</a></li>	
+<li><a href="#">T3RI, Registered Investment Income Tax Return</a></li>	
+<li><a href="#">T4, Statement of Remuneration Paid</a></li>
+<li><a href="#">T4A, Statement of Pension, Retirement, Annuity, and Other Income</a></li>	
+<li><a href="#">T4A-NR, Statement of Fees, Commissions, or Other Amounts Paid to Non-Residents for Services Rendered in Canada</a></li>	
+<li><a href="#">T1204, Government Service Contract Payments</a></li>
+<li><a href="#">T4RIF, Statement of Income From a Registered Retirement Income Fund</a></li>	
+<li><a href="#">T4RSP, Statement of Registered Retirement Savings Plan Income</a></li>	
+<li><a href="#">T5, Statement of Investment Income</a></li>	
+<li><a href="#">T5007, Statement of Benefits</a></li>	
+<li><a href="#">T5008, Statement of Securities Transactions</a></li>	
+<li><a href="#">T5018, Statement of Contract Payments</a></li>	
+<li><a href="#">T4A(OAS), Statement of Old Age Security</a></li>	
+<li><a href="#">T4A(P), Statement of Canada Pension/Quebec Pension Plan Benefits</a></li>	
+<li><a href="#">T4E, Statement of Employment Insurance Benefits</a></li>	
+<li><a href="#">SAFER, Manitoba Shelter Allowance for Elderly Renters (Rent Assist)</a></li>	
+<li><a href="#">RRSP, Contribution Receipt Filing</a></li>	
+<li><a href="#">T215, Exempt from Certification Past Service Pension Adjustment (PSPA)</a></li>	
+<li><a href="#">TFSA, Tax Free Savings Account</a></li>	
+<li><a href="#">T4FHSA, Tax Free First Home Savings Account</a></li>	
+<li><a href="#">T1061, Canadian Amateur Athletic Trust Group Information Return</a></li>	
+<li><a href="#">T5013, FIN Partnership Financial Return</a></li>	
+<li><a href="#">T5013, Partnership Information Return</a></li>	
+<li><a href="#">T661, Scientific Research and Experimental Development (SR&ED) Expenditures Claim</a></li>	
+<li><a href="#">PRPP, Pooled Registered Pension Plan Information Return</a></li>	
+<li><a href="#">RRSP and RRIF, Non-Qualified Investments Information Return</a></li>	
+<li><a href="#">Part XVIII Information Return, International Exchange of Information on Financial Accounts</a></li>	
+<li><a href="#">Part XIX Information Return, International Exchange of Information on Financial Accounts</a></li>		
+<li><a href="#">Worksheet T2000, Calculation of Tax on Agreements to Acquire Shares (Section 207.1(5) of the Income Tax Act)</a></li>	
+<li><a href="#">T2202, Tuition and enrolment certificate</a></li>				    
 </ul>
+            <nav class="gc-subway-pagination">
+               <h2 class="wb-inv">Document navigation</h2>
+               <ul class="pager">
+                  <li class="next"><a href="2.html" rel="next"><span class="wb-inv">Next: </span>When to file</a></li>
+               </ul>
             </nav>
             <div id="def-preFooter"></div>
             <!-- Write closure template -->
