--- a/subway/fire/index.html
+++ b/subway/fire/index.html
@@ -59,7 +59,14 @@
                <h1 class="gc-thickline mrgn-tp-0">File electronically: Information returns (tax slips and tax summaries)</h1>
                <div class="row">
                   <div class="col-md-8">
-                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p>Filing electronically lets you:</p>
+		    <ul class="fa-ul">
+  <li><span class="fas fa-check text-success fa-li"></span> Get confirmation within minutes</li>
+  <li><span class="fas fa-check text-success fa-li"></span> File securely</li>
+  <li><span class="fas fa-check text-success fa-li"></span> Make changes</li>
+  <li><span class="fas fa-check text-success fa-li"></span> Allow another authirized source, such as a tax preparer, to file for you</li>
+  <li><span class="fas fa-check text-success fa-li"></span> Send returns for the previous ten years</li>
+</ul>
                      <nav class="gc-subway provisional">
                         <h2>Sections</h2>
                         <dl>
