--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -263,6 +263,8 @@
 
 <p>You must report all income and deductions on a T4 or T4A slip for First Nations workers regardless of whether the income is taxable or exempt.</p>
 
+<p>If the payment is <strong>not</strong> employment or self-employment income, continue to <a href="first-nations-pop1.html">Information on the tax exemption under section 87 of the Indian Act</a></p>
+
 <div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#ajax-fntermall"></div>
 
 <p>Determine your withholding and reporting obligations based on the type of income you paid to the worker:</p>
