link label update

--- a/sred/scientific-research-experimental-development-tax-incentive-program/calculate-1.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/calculate-1.html
@@ -332,7 +332,7 @@ margin-left: 38px;
 <dl class="dl-horizontal brdr-bttm">		 
 		 
 <dt>Employees directly engaged in SR&amp;ED</dt>		 
-<dd class="mrgn-bttm-lg"><p>You may include the salary or wages of employees who are <a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/glossary.html#nggd">directly engaged</a> in SR&amp;ED doing hands-on work.</p>
+<dd class="mrgn-bttm-lg"><p>You may include the salary or wages of employees who are <a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/glossary.html#nggd">directly engaged in SR&amp;ED</a>  doing hands-on work.</p>
 <p>The portion of salary or wages you include must be based on the time employees spent on  SR&amp;ED activities and the tasks they performed, regardless of their job title. </p>
 
 <details>             
