--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -1865,13 +1865,13 @@
     <p>After gathering the facts, you may be able to decide based on the following indicators:</p>
     <ul class="cnjnctn-type-or cnjnctn-sm ">
       <li class="cnjnctn-col">
-       <p class="px-2 mrgn-bttm-sm"><span class="h6">Indicator that the worker is an </span><br><span class="h3">Employee</span></p>
+       <p class="bg-info px-2 mrgn-bttm-sm"><span class="h6">Indicator that the worker is an </span><br><span class="h3">Employee</span></p>
         <p class="mrgn-tp-md">If the worker is an employee, you may need to consider additional factors to determine if the worker is an <strong>incorporated employee</strong>. </p>
 <p>Special rules may apply to their corporation for income tax purposes if an individual performs the services on behalf of their own corporation. This may be considered a personal services business (PSB). </p>
         <p>Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors-psb.html">Determine if the worker is an incorporated employee</a> </p>
       </li>
       <li class="cnjnctn-col-80">
-		<p class="px-2 mrgn-bttm-sm"><span class="h6">Indicator that the worker is </span><br><span class="h3">Self-employed</span></p>
+		<p class="bg-primary px-2 mrgn-bttm-sm"><span class="h6">Indicator that the worker is </span><br><span class="h3">Self-employed</span></p>
         <p>If the worker is self-employed, continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/after.html">Understand the tax obligations</a></p>
       </li>
     </ul>
