--- a/guides/alberta/income-tax.html
+++ b/guides/alberta/income-tax.html
@@ -8,7 +8,7 @@
 <head>
 <meta charset="utf-8">
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-<title>All personal income tax packages - Canada.ca</title>
+<title>Income tax - Canada.ca</title>
 <meta content="width=device-width,initial-scale=1" name="viewport">
 <!-- Meta data --> 
 <!-- Meta data--> 
