--- a/guides/alberta/revenue-agency.html
+++ b/guides/alberta/revenue-agency.html
@@ -697,7 +697,7 @@ background-color: #26384a !important
                             <li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/payroll-deductions-online-calculator.html">Payroll deductions calculator</a></li>
                             <li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/gst-hst-netfile.html">GST/HST NETFILE</a></li>
                             <li><a href="https://www.canada.ca/en/services/benefits/calendar.html">Benefits payment dates</a></li>
-                            <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications.html">Forms and publications</a></li>
+                            <li><a href="/cra-arc/guides/alberta/forms-publications.html">Forms and publications</a></li>
                             <li><a href="https://www.canada.ca/en/revenue-agency/services/child-family-benefits/goods-services-tax-harmonized-sales-tax-gst-hst-credit/grocery-rebate.html">Grocery rebate</a></li>
                             <!--<li><a href="https://www.canada.ca/en/revenue-agency/services/subsidy/recovery-hiring-program.html">Canada Recovery Hiring Program (CRHP)</a></li>--> 
                             <!--li><a href="https://www.canada.ca/en/revenue-agency/services/payments-cra.html">Payments to the Canada Revenue Agency</a></li-->
