--- a/guides/alberta/forms-publications.html
+++ b/guides/alberta/forms-publications.html
@@ -256,7 +256,7 @@ function startChatSession() {
         //default: undefined
         botAvatarInitials: 'Bot',
         userAvatarInitials: 'You',
-        botAvatarImage: "/content/dam/cra-arc/chatbot/avatar_head.png"
+        botAvatarImage: "https://www.canada.ca/content/dam/cra-arc/chatbot/avatar_head.png"
       };
       window.WebChat.renderWebChat({
         directLine: window.WebChat.createDirectLine({
@@ -299,7 +299,7 @@ function startChatSession() {
          </style>
 	<style>
 .ip-cover-img {
-        background-image: url("/content/dam/cra-arc/images/CRAHQexterior-white.jpg");
+        background-image: url("https://www.canada.ca/content/dam/cra-arc/images/CRAHQexterior-white.jpg");
         background-repeat: no-repeat;
         background-size: cover;
         background-position: right;
@@ -643,7 +643,7 @@ background-color: #26384a !important
   <div class="col-md-6">
     <p class="pagetag"> Forms, guides,&nbsp;tax packages,&nbsp;and other Canada Revenue Agency (CRA)&nbsp;publications. </p>
   </div>
-  <div class="col-md-6 mrgn-tp-md hidden-sm hidden-xs"> <img src="/content/dam/cra-arc/serv-info/formspubs/formspubs.jpg" alt="" class="pull-right thumbnail img-responsive"> </div>
+  <div class="col-md-6 mrgn-tp-md hidden-sm hidden-xs"> <img src="https://www.canada.ca/content/dam/cra-arc/serv-info/formspubs/formspubs.jpg" alt="" class="pull-right thumbnail img-responsive"> </div>
 </div>
 <div class="row">
   <div class="col-md-4 pull-right">
