--- a/payroll/employee/changes.html
+++ b/payroll/employee/changes.html
@@ -100,7 +100,7 @@
 <li><a href="#h-1">Employee wants to increase income tax deductions</a></li>    	  
 <li><a href="#h-2">Employee wants to reduce income tax deductions</a></li>    
 <li><a href="#h-3">Employer or payer wants to reduce income tax deductions (blanket waiver for $15,000 or less)</a></li>
-<li><a href="#h-3b">Non-resident providing self-employment or employment services wants to request a waiver or reduce income tax deductions</a></li>    	  
+<li><a href="#h-3b">Non-resident employees or self-employed workers who provides services wants to request a waiver or reduce income tax deductions</a></li>    	  
 <li><a href="#h-4">Life events that affect CPP, EI and income tax withholdings</a></li>
 <li><a href="#h_6">References</a></li>  
   </ul>
