--- a/payroll/register/after.html
+++ b/payroll/register/after.html
@@ -105,6 +105,7 @@
 </li>
 <li><a href="#h_3">When to open a separate payroll account</a></li>
 <li><a href="#h_que">What to do if you have a business in Quebec</a></li>
+<li><a href="#h_outside">What to do if you are a non-resident employer with non-resident employees providing services in Canada</a></li>
 		 </ul>
 </div>
 <div class="clear"></div>
@@ -136,6 +137,9 @@
 <h2 id="h_que">What to do if you have a business in Quebec</h2>
 <p>If you have a place of business in Quebec, in addition to registering for source deductions with the CRA, you may have to register with Revenu Québec.</p> <p>Learn more: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/registering-for-source-deductions/">Registering for source deduction - Revenue Québec</a></p>
 
+<h2 id="h_outside">What to do if you are a non-resident employer with non-resident employees providing services in Canada</h2>
+<p>If you have a place of business only outside Canada and you are sending non-resident employees to provide services in Canada, you must become a qualifying non-resident employer by filling out Form RC473, Application for Non-Resident Employer Certification.</p>
+<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents/information-been-moved/rendering-services-canada/non-resident-employer-certification.html">Non-resident employer certification</a>	</p>
 		 
 <nav class="mrgn-bttm-lg mrgn-tp-lg">
   <h3 class="wb-inv">Document navigation</h3>
