--- a/payroll/employee/changes.html
+++ b/payroll/employee/changes.html
@@ -100,7 +100,7 @@
 <li><a href="#h-1">Employee wants to increase income tax deductions</a></li>    	  
 <li><a href="#h-2">Employee wants to reduce income tax deductions</a></li>    
 <li><a href="#h-3">Employer or payer wants to reduce income tax deductions (blanket waiver for $15,000 or less)</a></li>
-<li><a href="#h-3b">Non-resident employees or self-employed workers who provides services wants to request a waiver or reduce income tax deductions</a></li>    	  
+<li><a href="#h-3b">Non-resident employees or self-employed workers who provide services wants to request a waiver or reduce income tax deductions</a></li>    	  
 <li><a href="#h-4">Life events that affect CPP, EI and income tax withholdings</a></li>
 <li><a href="#h_6">References</a></li>  
   </ul>
@@ -170,7 +170,7 @@
 <li>Reduce the lump sum payment by the amount on the declaration of intent in order to calculate the <strong>taxable </strong>amount of the lump sum payment </li>
 </ul>
 
-<h2 id="h-3b">Non-resident employees or self-employed workers who provides services wants to request a waiver or reduce income tax deductions</h2>	
+<h2 id="h-3b">Non-resident employees or self-employed workers who provide services wants to request a waiver or reduce income tax deductions</h2>	
 <p>Non-resident employees or self-employed workers who provides services may want to request a waiver or reduce income tax deductions. </p>
 <p>If you are certified as a qualifying non-resident employer and the employee is a qualifying non-resident employee, they may not need to apply for a waiver from the CRA.</p>
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents/film-media-tax-credits/behind-scenes-personnel/waivers-withholding-tax.html">Waivers of withholding tax</a></p>
