--- a/payroll/employee/changes.html
+++ b/payroll/employee/changes.html
@@ -176,7 +176,7 @@
 <p>Depending on the situation, you may still have to withhold Canada Pension Plan (CPP) contributions and Employment Insurance (EI) premiums.</p>
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents/information-been-moved/rendering-services-canada/non-resident-employer-certification.html">Non-resident employer certification</a></p>
 <h3>Non-resident employer without certification from the CRA</h3>	
-<p>If you do not certify, your non-resident employees or self-employed workers who provide services may want to request a waiver or reduce income tax deductions.</p>
+<p>If you do not certify, your non-resident employees or self-employed workers who provide services may want to request a waiver to reduce income tax deductions.</p>
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents/film-media-tax-credits/behind-scenes-personnel/waivers-withholding-tax.html">Waivers of withholding tax</a></p>
 
 <h2 id="h-4">Life events that affect CPP, EI and income tax withholdings</h2>
