--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -308,7 +308,7 @@
 
 
 <h2 id="h_1">Determine if the benefit is taxable</h2>
-<p class="mrgn-bttm-lg">Generally, if you provide special clothing or an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a> or a <a href="#reimbursement" aria-controls="centred-popup" class="wb-lbx" role="button">reimbursement&nbsp;<span class="far fa-question-circle"></span></a> for special clothing to your employee, the benefit is taxable. Depending on your situation, the benefit may not be taxable under the <a href="#adminpolicy" aria-controls="centred-popup" class="wb-lbx" role="button">CRA's administrative policy&nbsp;<span class="far fa-question-circle"></span></a>. </p>
+<p class="mrgn-bttm-lg">Generally, if you provide special clothing or an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a>, or you <a href="#reimbursement" aria-controls="centred-popup" class="wb-lbx" role="button">reimburse&nbsp;<span class="far fa-question-circle"></span></a> for special clothing to your employee, the benefit is taxable. Depending on your situation, the benefit may not be taxable under the <a href="#adminpolicy" aria-controls="centred-popup" class="wb-lbx" role="button">CRA's administrative policy&nbsp;<span class="far fa-question-circle"></span></a>.</p>
 
 <h4>Non-taxable situation</h4>
 <p>Under the CRA's administrative policy, the benefit is <strong>not </strong>taxable if <strong>one</strong> of the following apply:</p>
