--- a/payroll/calculate/benefit/tickets.html
+++ b/payroll/calculate/benefit/tickets.html
@@ -312,10 +312,9 @@
 <p class="mrgn-bttm-lg">Generally, event tickets you provide, pay or reimburse to your employees are taxable. Depending on your situation, the benefit may not be taxable under the <a href="#adminpolicy" aria-controls="centred-popup" class="wb-lbx" role="button">CRA's administrative policy&nbsp;<span class="far fa-question-circle"></span></a>. </p>
 
 <h4>Non-taxable situation</h4>
-<p>If you provide your employee with an event ticket, the benefit is <strong>not </strong>taxable if <strong>all</strong> of the following apply:</p>
+<p>Under the CRA's administrative policy, if you provide your employee with an event ticket and it is provided for <strong>business use</strong>, the benefit is <strong>not </strong>taxable if <strong>all</strong> of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and ">
 <li class="cnjnctn-col">Employee is attending the event to carry out their <a href="#duties" aria-controls="centred-popup" class="wb-lbx" role="button">employment duties&nbsp;<span class="far fa-question-circle"></span></a></li>
-<li class="cnjnctn-col">Amount is reasonable and you can justify your position</li>
 <li class="cnjnctn-col">You kept all <a href="#records" aria-controls="centred-popup" class="wb-lbx" role="button">required records&nbsp;<span class="far fa-question-circle"></span></a></li>
 <li class="cnjnctn-col">You can <strong>clearly demonstrate that you are the primary beneficiary of the benefit</strong> </li>
 </ul>
@@ -344,7 +343,7 @@
 </details>
 
 <h4>Taxable situation</h4>
-<p>If the benefit <strong>does not meet one of the conditions above</strong>, the benefit is taxable.</p>
+<p>If the benefit <strong>does not meet one of the conditions above</strong>, the benefit is taxable .</p>
 
 
 <h2 id="h_2">Calculate the value of the benefit</h2>
