--- a/payroll/calculate/benefit/tickets.html
+++ b/payroll/calculate/benefit/tickets.html
@@ -343,8 +343,8 @@
 </details>
 
 <h4>Taxable situation</h4>
-<p>If the benefit <strong>does not meet one of the conditions above</strong>, the benefit is taxable .</p>
-
+<p>If the benefit <strong>does not meet one of the conditions above</strong>, the benefit is taxable.</p>
+<p>The CRA's administrative policy does not apply if you provide your employee with an event ticket for personal use.</p>
 
 <h2 id="h_2">Calculate the value of the benefit</h2>
 <p><strong>If the benefit is taxable</strong>, the value of the benefit is equal to:</p>
