--- a/payroll/calculate/benefit/tickets.html
+++ b/payroll/calculate/benefit/tickets.html
@@ -289,8 +289,10 @@
 
 </div>
 
-<p>You may provide tickets to entertainment and sporting events to your employees. For example, tickets to sports games, concerts and performing arts events.</p>
+ <p>You may provide tickets to entertainment and sporting events to your employees. For example, tickets to sports games, concerts and performing arts events.</p>
 	
+<p>If the event ticket was provided part of gift or an award, continue to: <a href="https://test.canada.ca/cra-arc/payroll/calculate/benefit/gifts.html">Gifts, awards, and long-service awards</a> </p>
+
   <h2 class="h3">On this page</h2>
   	
 <ul>
